# Locust

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  RELEASE.md  USAGE.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: commands.rs  main.rs
apps/desktop/src/components/: ActivityLog.tsx  BottomBar.tsx  DetailPanel.tsx  DiffView.tsx  FilterBar.tsx  HotkeyHelp.tsx  InjectModal.tsx  Layout.tsx  QueuePanel.tsx  SearchReplace.tsx  StringTable.tsx  ToastContainer.tsx  TranslationModal.tsx  UpdateChecker.tsx
apps/desktop/src/lib/: api.ts  hotkeys.ts  ws.ts
apps/desktop/src/pages/: Editor.tsx  Review.tsx  Settings.tsx  TranslationMemory.tsx  Welcome.tsx
apps/desktop/src/stores/: editorStore.ts  logStore.ts  projectStore.ts  queueStore.ts  toastStore.ts
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_tests.rs
crates/core/: Cargo.toml
crates/core/src/: backup.rs  config.rs  database.rs  encoding.rs  error.rs  export.rs  extraction.rs  font_validation.rs  glossary.rs  lib.rs  models.rs  placeholder.rs  translation.rs  validation.rs  wasm_plugin.rs
crates/formats/: Cargo.toml
crates/formats/src/: html_game.rs  lib.rs  renpy.rs  rpgmaker_mv.rs  rpgmaker_vxa.rs  sugarcube.rs  unity.rs  unreal.rs  wolf_rpg.rs
crates/formats/tests/: inject_direct.rs  inject_renpy_real.rs  inject_unity_real.rs  real_games.rs  real_unity.rs
crates/formats/tests/fixtures/renpy/game/: gui.rpy  script.rpy
crates/formats/tests/fixtures/rpgmaker_mv/data/: Actors.json  Map001.json  System.json
crates/formats/tests/fixtures/wolf_rpg/Data/: BasicData.wolf
crates/providers/: Cargo.toml
crates/providers/src/: argos.rs  claude.rs  deepl.rs  google.rs  lib.rs  mock.rs  ollama.rs  openai.rs  retry.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/server/tests/: integration.rs
docs/: update-server.md
docs/plugin-example/: Cargo.toml  plugin.md
docs/plugin-example/src/: lib.rs
scripts/: generate-updater-manifest.sh  quick_inject.rs
session/: session.md
tests/integration/: main.rs
