[package]
name = "locust-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "locust"
path = "src/main.rs"

[dependencies]
locust-core = { path = "../core" }
locust-formats = { path = "../formats" }
locust-providers = { path = "../providers" }
locust-server = { path = "../server" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
comfy-table = "7"
uuid.workspace = true

[dependencies.tokio-util]
version = "0.7"
features = ["rt"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
