[package]
name = "locust-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
chrono.workspace = true
uuid.workspace = true
sha2.workspace = true
hex.workspace = true
dirs.workspace = true
rusqlite.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true

walkdir.workspace = true
encoding_rs = "0.8"
chardet = "0.2"
ttf-parser = "0.21"

[dependencies.tokio-util]
version = "0.7"
features = ["rt"]
