[package]
name = "locust-formats"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
locust-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
walkdir.workspace = true
