[package]
name = "locust-formats"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
locust-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
walkdir.workspace = true
tracing.workspace = true
encoding_rs = "0.8"
uuid.workspace = true
miniz_oxide = "0.8"
md-5 = "0.10"

[dev-dependencies]
tempfile = "3"
