[package]
name = "locust-providers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
locust-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
async-trait.workspace = true
reqwest.workspace = true
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
httpmock = "0.7"
tokio = { version = "1", features = ["full", "test-util"] }
