[package]
name = "locust-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
locust-core = { path = "../core" }
locust-formats = { path = "../formats" }
locust-providers = { path = "../providers" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
axum.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rusqlite.workspace = true
