[package]
name = "locust-desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
locust-core = { path = "../../../crates/core" }
locust-server = { path = "../../../crates/server" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tokio.workspace = true
human-panic = "2"
tauri = { version = "2.10.3", features = ["custom-protocol"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }
